# SourcetrailDB

./: .gitignore  .travis.yml  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  LANGUAGE_EXTENSION_GUIDE.md  README.md  SourcetrailDB.srctrlprj  appveyor.yml  version.txt  version.txt.in
bindings_csharp/: CMakeLists.txt  CoatiSoftware.SourcetrailDB.csproj
bindings_java/: CMakeLists.txt
bindings_perl/: CMakeLists.txt
bindings_python/: CMakeLists.txt
core/: .clang-format  CMakeLists.txt  version.h.in
core/include/: DatabaseStorage.h  DefinitionKind.h  EdgeKind.h  ElementComponentKind.h  LocationKind.h  NameElement.h  NameHierarchy.h  NodeKind.h  ReferenceKind.h  SourceLocation.h  SourceRange.h  SourcetrailDBWriter.h  SourcetrailException.h  StorageEdge.h  StorageElementComponent.h  StorageError.h  StorageFile.h  StorageLocalSymbol.h  StorageNode.h  StorageOccurrence.h  StorageSourceLocation.h  StorageSymbol.h  SymbolKind.h  utility.h
core/src/: DatabaseStorage.cpp  DefinitionKind.cpp  EdgeKind.cpp  ElementComponentKind.cpp  LocationKind.cpp  NameHierarchy.cpp  NodeKind.cpp  ReferenceKind.cpp  SourcetrailDBWriter.cpp  StorageTypes.cpp  SymbolKind.cpp  utility.cpp
core/test/: test.cpp
examples/cpp_api_example/: CMakeLists.txt  README.md  cpp_api_example.srctrlprj.in
examples/cpp_api_example/data/: example.cpp
examples/cpp_api_example/src/: main.cpp
examples/cpp_poetry_indexer/: CMakeLists.txt  README.md  poetry_indexer.srctrlprj.in
examples/cpp_poetry_indexer/data/: COPYRIGHT.txt  christopher_marlowe_-_elegies_book_one_5.txt  christopher_marlowe_-_from_hero_and_leander_it_lies_not_in_our_power_to_love_or_hate.txt  christopher_marlowe_-_hero_and_leander.txt  christopher_marlowe_-_the_passionate_shepherd_to_his_love.txt  duchess_of_newcastle_margaret_cavendish_-_an_epilogue_to_the_above.txt  duchess_of_newcastle_margaret_cavendish_-_the_duchess_to_her_readers.txt  e_e_cummings_-_in_just-.txt  e_e_cummings_-_little_tree.txt  edmund_spenser_-_amoretti_i_happy_ye_leaves_when_as_those_lilly_hands.txt  edmund_spenser_-_amoretti_iii_the_sovereign_beauty.txt  edmund_spenser_-_amoretti_iv_new_yeare_forth_looking_out_of_janus_gate.txt  edmund_spenser_-_amoretti_liv_of_this_worlds_theatre_in_which_we_stay.txt  edmund_spenser_-_amoretti_lv_so_oft_as_i_her_beauty_do_behold.txt  edmund_spenser_-_amoretti_lxii_the_weary_yeare_his_race_now_having_run.txt  edmund_spenser_-_amoretti_lxvi_to_all_those_happy_blessings_which_ye_have.txt  edmund_spenser_-_amoretti_lxvii_like_as_a_huntsman.txt  edmund_spenser_-_amoretti_lxx_fresh_spring_the_herald_of_loves_mighty_king.txt  edmund_spenser_-_amoretti_lxxi_i_joy_to_see_how_in_your_drawen_work.txt  edmund_spenser_-_amoretti_lxxiv_most_happy_letters.txt  edmund_spenser_-_amoretti_lxxix_men_call_you_fair.txt  edmund_spenser_-_amoretti_lxxv_one_day_i_wrote_her_name.txt  edmund_spenser_-_amoretti_lxxxi_fayre_is_my_love_when_her_fayre_golden_heares.txt  edmund_spenser_-_amoretti_lxxxix_lyke_as_the_culver_on_the_bared_bough.txt  edmund_spenser_-_amoretti_viii_more_then_most_faire_full_of_the_living_fire.txt  edmund_spenser_-_amoretti_xiii_in_that_proud_port_which_her_so_goodly_graceth.txt  edmund_spenser_-_amoretti_xv_ye_tradefull_merchants_that_with_weary_toyle.txt  edmund_spenser_-_amoretti_xxii_this_holy_season.txt  edmund_spenser_-_amoretti_xxiii_penelope_for_her_ulisses_sake.txt  edmund_spenser_-_amoretti_xxx_my_love_is_like_to_ice_and_i_to_fire.txt  edmund_spenser_-_an_hymn_in_honour_of_beauty.txt  edmund_spenser_-_epithalamion.txt  edmund_spenser_-_from_the_faerie_queene_book_i_canto_i.txt  edmund_spenser_-_from_the_shepheardes_calender_april.txt  edmund_spenser_-_from_the_shepheardes_calender_october.txt  edmund_spenser_-_iambicum_trimetrum.txt  edmund_spenser_-_joy_of_my_life_full_oft_for_loving_you.txt  edmund_spenser_-_prothalamion.txt  edmund_spenser_-_the_shepheardes_calender_january.txt  elinor_wylie_-_full_moon.txt  (+320 more)
examples/cpp_poetry_indexer/src/: main.cpp
examples/java_api_example/: CMakeLists.txt  README.md  java_api_example.srctrlprj.in
examples/java_api_example/src/: example.java
examples/java_api_example/src/za/co/spazzymoto/: example.java
examples/perl_api_example/: CMakeLists.txt  README.md  perl_api_example.srctrlprj.in
examples/perl_api_example/data/: file.pl
examples/perl_api_example/src/: example.pl
examples/python_api_example/: CMakeLists.txt  README.md  python_api_example.srctrlprj.in
examples/python_api_example/data/: file.py
examples/python_api_example/src/: example.py
examples/python_binding_example/: CMakeLists.txt  python_binding_example.srctrlprj.in
examples/python_binding_example/src/: example.py
resources_swig/include/: sourcetraildb.h
resources_swig/interface/: sourcetraildb.i
resources_swig/src/: sourcetraildb.cpp
travis/: bundle.sh  install.sh  script.sh
